tests/paczka1/fuzzy1/41586395.err
Error in line 9: jiiRYkjr A492 -1,6
Error in line 7: jiiRYkjr A492 11,8
Error in line 14: ijALiMw S536 70,4
Error in line 17: S536 A492 61,4
Error in line 10: xKGJWitOtR A86 44,3
Error in line 24: xKGJWitOtR A492 10,3
Error in line 25: jiiRYkjr A86 17,7
Error in line 34: S536 A911 51,9
